--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="hcWP6gMEfMObKH_kvyK7NXX56RIlZT_Ze21ZKDc0RVM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RastriyaSena</title>
@@ -102,4 +103,5 @@
   </div>
 
   </body>
+
 </html>
