--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
     <input type="text" name="city" placeholder="City" required>
     <button type="submit">Register</button>
   </form>
+    <script>
+document.getElementById("regForm").addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  fetch("PASTE_YOUR_GOOGLE_SCRIPT_URL_HERE", {
+    method: "POST",
+    body: JSON.stringify({
+      name: document.querySelector("#regForm input[name='name']").value,
+      email: document.querySelector("#regForm input[name='email']").value,
+      phone: document.querySelector("#regForm input[name='phone']").value,
+      city: document.querySelector("#regForm input[name='city']").value
+    })
+  })
+  .then(res => res.text())
+  .then(data => {
+    alert("✅ Registration successful!");
+    document.getElementById("regForm").reset();
+  })
+  .catch(err => alert("❌ Error: " + err));
+});
+</script>
+
 </section>
 <section>
   
@@ -105,3 +127,4 @@
   </body>
 
 </html>
+
